--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-moment": "^0.9.7",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
