--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
